plugins {
	id 'org.springframework.boot' version '2.3.3.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10" // querydsl 플러그인 추가
	id 'java'
}

group = 'iljin'
version = '0.0.1'
description = 'iljin-framework'

sourceCompatibility = '1.11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenLocal()
	mavenCentral()
	flatDir{
		dirs('libs')
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'com.auth0:java-jwt:3.10.3'
	implementation 'org.springframework.boot:spring-boot-starter-mustache'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.7.1'
	implementation 'org.apache.commons:commons-lang3:3.8.1'
	implementation 'org.apache.poi:poi-ooxml:4.1.2'
	implementation 'org.modelmapper:modelmapper:2.3.2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testImplementation 'org.springframework.security:spring-security-test'
	testCompile group: 'junit', name: 'junit', version: '4.13'
	implementation 'org.mariadb.jdbc:mariadb-java-client'
	implementation 'org.springframework.session:spring-session-jdbc'
	implementation 'org.jetbrains:annotations:19.0.0'
	implementation 'org.javassist:javassist:3.23.1-GA'
	implementation 'com.google.code.gson:gson:2.8.5'
	implementation 'com.google.firebase:firebase-admin:6.8.1'
	implementation 'com.querydsl:querydsl-jpa:4.2.1'
	implementation 'com.querydsl:querydsl-apt:4.2.1'
	implementation 'com.querydsl:querydsl-core:4.2.1'
	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
	implementation 'io.springfox:springfox-swagger2:2.9.2'
	implementation 'io.springfox:springfox-core:2.9.2'
	implementation 'com.google.guava:guava:27.1-jre'
	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
	implementation 'org.qlrm:qlrm:2.1.1'
	implementation 'commons-httpclient:commons-httpclient:3.1'
	implementation 'commons-beanutils:commons-beanutils:1.9.3'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'de.codecentric:spring-boot-admin-starter-client:2.2.1'
	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
	compile fileTree(include: ['*.jar'], dir: 'libs')
}

// querydsl 설정 시작
// querydsl에서 사용할 경로 설정
def querydslDir = "$buildDir/generated/querydsl"

// JPA 사용 여부 및 사용할 경로 설정
querydsl {
	jpa = true
	querydslSourcesDir = querydslDir
}

// build 시 사용할 sourceSet 추가 설정
sourceSets {
	main.java.srcDir querydslDir
}

// querydsl 컴파일 시 사용할 옵션 설정
compileQuerydsl{
	options.annotationProcessorPath = configurations.querydsl
}

// querydsl이 compileClassPath를 상속하도록 설정
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	querydsl.extendsFrom compileClasspath
}
// querydsl 설정 종료

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.fork = true
	options.forkOptions.jvmArgs += [
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
		'--add-opens', 'jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED'
	]
}

task pathingJar(type: Jar) {
	dependsOn configurations.runtime
	appendix = "pathing"

	doFirst {
		manifest {
			attributes "Class-Path": configurations.runtime.files.collect {
				it.toURI().toString().replaceFirst(/file:\/+/, '/')
			}.join(' ')
		}
	}

	extension = "jar"
	archiveFileName = "eacct-back-pathing.$extension"
}

bootJar {
	extension = "jar"
	archiveFileName = "eacct-back.$extension"
}

bootRun {
	mainClass = 'com.iljin.apiServer.ApiServerApplication'
}

test {
	useJUnitPlatform()
}
